<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/item_search"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/search"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/item_camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/camera"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/item_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/item_carousel"
        android:title="@string/carousel"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_wallpaper"
        android:title="@string/wallpaper"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_remove"
        android:title="@string/remove"
        app:showAsAction="ifRoom" />
</menu>
